<resources>
    <string name="app_name">ba_tabletapp</string>
    <string name="action_settings">Settings</string>
    <string name="helloworld">Hello World</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Passwort:</string>
    <string name="dienstnr">Dienstnummer:</string>
    <string name="dienstbeginn">Dienstbeginn:</string>
    <string name="dienstort">Ort:</string>
    <string name="dienstfahrzeug">Fahrzeug:</string>
    <string name="umleitung">Umleitungen:</string>
    <string name="btnweiter">Weiter</string>
    <string name="defaultUmleitung">3 neue Umleitungen</string>
    <string name="txtheute">Heute</string>
    <string name="txtauswertung">Auswertung</string>
    <string name="txtfahrinformation">Fahrinformation</string>
    <string name="txtdienstplan">Dienstplan</string>
    <string name="txtnachrichten">Nachrichten</string>
    <string name="actheutename">|Name:</string>
    <string name="actheutestatus1">Status1:</string>
    <string name="actheutestartzeit">Startzeit:</string>
    <string name="actheuteortkuerzel">Ort_Kuerzel:</string>
    <string name="actheuteendzeit">Endzeit:</string>
    <string name="actheutestatus2">Status2:</string>
    <string name="menueuebersicht">Übersicht</string>
</resources>
