<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/dienstnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="214dp"
        android:id="@+id/txtDienstNr"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/umleitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUmleitung"
        android:textSize="32sp"
        android:layout_alignBaseline="@+id/txtDienstFahrzeug"
        android:layout_alignBottom="@+id/txtDienstFahrzeug"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="70dp"
        android:layout_marginEnd="70dp" />

    <TextView
        android:text="@string/dienstort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDienstOrt"
        android:textSize="32sp"
        android:layout_alignBaseline="@+id/txtDienstBeginn"
        android:layout_alignBottom="@+id/txtDienstBeginn"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/dienstfahrzeug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDienstFahrzeug"
        android:textSize="32sp"
        android:layout_marginRight="116dp"
        android:layout_marginEnd="116dp"
        android:layout_alignBaseline="@+id/txtDienstOrt"
        android:layout_alignBottom="@+id/txtDienstOrt"
        android:layout_toLeftOf="@+id/txtUmleitung"
        android:layout_toStartOf="@+id/txtUmleitung" />

    <TextView
        android:text="@string/dienstbeginn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDienstBeginn"
        android:textSize="32sp"
        android:layout_alignBaseline="@+id/txtDienstNr"
        android:layout_alignBottom="@+id/txtDienstNr"
        android:layout_toLeftOf="@+id/txtDienstOrt"
        android:layout_toStartOf="@+id/txtDienstOrt"
        android:layout_marginRight="90dp" />

    <Button
        android:text="@string/btnweiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnWeiter"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />
</RelativeLayout>