<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/btnlogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="15"
        android:textSize="32sp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_above="@+id/txtpassword"
        android:layout_toRightOf="@+id/lblusername"
        android:layout_toEndOf="@+id/lblusername" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="15"
        android:textSize="32sp"
        android:layout_alignBottom="@+id/lblpassword"
        android:layout_alignLeft="@+id/txtusername"
        android:layout_alignStart="@+id/txtusername" />

    <TextView
        android:id="@+id/lblpassword"
        android:text="@string/password"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblusername"
        android:layout_alignLeft="@+id/lblusername"
        android:layout_alignStart="@+id/lblusername"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/lblusername"
        android:text="@string/username"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginLeft="220dp"
        android:layout_marginStart="220dp"
        android:layout_below="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>